# ai-skills

./: .bandit  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml  todo-precommit.md  yaml.pyi
.github/workflows/: ci.yml
.omo/: boulder.json
.omo/plans/: ai-skills-vnext.md
.omo/run-continuation/: ses_166d6fc61ffezdQOQ2efvpMYwL.json
decisions/: decision.001-docs-standard-decisions.md  decision.002-mcp-standard-decisions.md  decision.003-ci-cd-architect.md  decision.004-skill-dependencies.md  decision.005-ai-review-integration.md  decision.006-mcp-enhanced-standard.md  decision.007-precommit-architect.md
skills/afds-doc-writer/: SKILL.md  afds_config.yaml  docs-template.md  docs_standards.md  docs_validate.py  skill.md
skills/ci-cd-architect/: SKILL.md  ci-cd-standard.md
skills/ci-cd-architect/references/: action-version-matrix.md
skills/ci-cd-architect/templates/: auto-tag.yml.j2  ci-cd-config.example.yaml  ci.yml.j2  (+6 more)
skills/mcp-server-architect/: SKILL.md  mcp-server-standards.md  mcp_standards.md  skill.md
skills/mcp-server-consumer/: SKILL.md  mcp-consumer-standards.md  skill.md
skills/pre-commit-architect/: SKILL.md  precommit-standard.md
templates/: docs-template.md
tests/: conftest.py  test_ci_cd_architect.py  test_ci_workflow.py  test_config_consistency.py  test_consumer_decisions.py  test_consumer_efficiency.py  test_consumer_helpers.py  test_consumer_standards.py  test_cross_refs.py  test_mcp_standards.py  test_precommit_standard.py  test_standard.py  test_template.py  test_validate_unit.py
(+7 files in other folders)
