[project]
name = "ai-skills"
requires-python = ">=3.14"
dependencies = [
    "pyyaml>=6.0",
    "pytest>=8.0",
]

[tool.pytest]
testpaths = ["tests"]
python_files = ["test_*.py"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.mypy]
python_version = "3.14"
strict = true

[[tool.mypy.overrides]]
module = ["fastmcp", "requests", "pyyaml", "starlette", "uvicorn", "dateutil", "pydantic", "yaml"]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests/"]
skips = ["B101"]
